load("//terraform:terraform.bzl", "declare_terraform_toolchains")

package(default_visibility = ["//visibility:public"])

declare_terraform_toolchains(
    version = "{version}",
    sha256 = "{sha256}"
)

filegroup(
    name = "{name}",
    srcs = ["terraform/terraform{exe}"],
    visibility = ["//visibility:public"]
)
